<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <Button
        android:id="@+id/title_exit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/arrow_left"/>
    <TextView
        android:id="@+id/title_select_all_none"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="@string/title_select_all_default_text"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="visible"
        android:clickable="true"
        android:focusable="true"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title_text"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/title_edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/edit"/>
    <TextView
        android:id="@+id/title_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/title_cancel_text"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:clickable="true"
        android:focusable="true"/>


</LinearLayout>