<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/tool_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/no"
            android:src="@drawable/image" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tool_image_text"
            android:gravity="center"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tool_video"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/no"
            android:src="@drawable/video" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tool_video_text"
            android:gravity="center"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


</LinearLayout>